fix: Create child container to wrap children
Create a ChildContainer comp' to wrap all children that represent the view for the current route.
This let's the child route define if they want a full width view or if they want the standard
max-width view.

--- a/common/app/app.less
+++ b/common/app/app.less
@@ -7,8 +7,11 @@
 }
 
 .@{ns}-content {
-  .center(@value: @container-xl, @padding: @grid-gutter-width);
   // makes the inital content height 0px
   // then lets it grow to fit the rest of the space
   flex: 1 0 0px;
+}
+
+.@{ns}-centered {
+  .center(@value: @container-xl, @padding: @grid-gutter-width);
 }
